@@ -4,6 +4,8 @@ Revision history for Plack-Middleware-Statsd
   [Documentation]
   - Added note about modifying sample rates.
 
+  - Added note about support for older Perl versions.
+
 v0.3.0    2018-02-06 11:10:44+00:00 Europe/London
   [Enhancements]
   - Catch log errors when calling the statsd client, #1.
